--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres.bkzdtegbwjceltffidnp:dsadhaskjdhsakd@aws-1-us-east-2.pooler.supabase.com:5432/postgres
+mysql_connection_string=postgresql://postgres.bkzdtegbwjceltffidnp:dsadhaskjdhsakd@aws-1-us-east-2.pooler.supabase.com:5432/postgres
